background fixed on mobile

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -348,7 +348,7 @@ header nav li {
   }
 
   .background {
-    height: 150vh;
+    height: 125vh;
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
